pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAppCategory_Application/adminPolicies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (All Connections from (group = Gryffindor) to (group = Gryffindor))'
        nsx-id: "10218"
    creationTimestamp: null
    name: admin_policy_0
spec:
    egress:
        - action: Pass
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: group__Gryffindor
                          operator: Exists
    priority: 1
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (All Connections from (group = Gryffindor) to (group = Gryffindor))'
        nsx-id: "10218"
    creationTimestamp: null
    name: admin_policy_1
spec:
    ingress:
        - action: Pass
          from:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: group__Gryffindor
                          operator: Exists
          ports: null
    priority: 2
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (All Connections from (group = Hufflepuff) to (group = Hufflepuff))'
        nsx-id: "10219"
    creationTimestamp: null
    name: admin_policy_2
spec:
    egress:
        - action: Pass
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: group__Hufflepuff
                          operator: Exists
    priority: 3
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: group__Hufflepuff
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (All Connections from (group = Hufflepuff) to (group = Hufflepuff))'
        nsx-id: "10219"
    creationTimestamp: null
    name: admin_policy_3
spec:
    ingress:
        - action: Pass
          from:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: group__Hufflepuff
                          operator: Exists
          ports: null
    priority: 4
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: group__Hufflepuff
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (All Connections from (group = Slytherin) to (group = Slytherin))'
        nsx-id: "10220"
    creationTimestamp: null
    name: admin_policy_4
spec:
    egress:
        - action: Pass
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: group__Slytherin
                          operator: Exists
    priority: 5
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (All Connections from (group = Slytherin) to (group = Slytherin))'
        nsx-id: "10220"
    creationTimestamp: null
    name: admin_policy_5
spec:
    ingress:
        - action: Pass
          from:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: group__Slytherin
                          operator: Exists
          ports: null
    priority: 6
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (All Connections from (group = Dumbledore) to (group = Gryffindor))'
        nsx-id: "10221"
    creationTimestamp: null
    name: admin_policy_6
spec:
    egress:
        - action: Pass
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: group__Gryffindor
                          operator: Exists
    priority: 7
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: group__Dumbledore
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (All Connections from (group = Dumbledore) to (group = Gryffindor))'
        nsx-id: "10221"
    creationTimestamp: null
    name: admin_policy_7
spec:
    ingress:
        - action: Pass
          from:
            - pods:
                namespaceSelector: {}
                podSelector:
                    matchExpressions:
                        - key: group__Dumbledore
                          operator: Exists
          ports: null
    priority: 8
    subject:
        pods:
            namespaceSelector: {}
            podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (All Connections from (*) to (*))'
        nsx-id: "10300"
    creationTimestamp: null
    name: admin_policy_8
spec:
    egress:
        - action: Deny
          ports: null
          to:
            - pods:
                namespaceSelector: {}
                podSelector: {}
    priority: 9
    subject:
        pods:
            namespaceSelector: {}
            podSelector: {}
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (All Connections from (*) to (*))'
        nsx-id: "10300"
    creationTimestamp: null
    name: admin_policy_9
spec:
    ingress:
        - action: Deny
          from:
            - pods:
                namespaceSelector: {}
                podSelector: {}
          ports: null
    priority: 10
    subject:
        pods:
            namespaceSelector: {}
            podSelector: {}
status:
    conditions: null
