pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAppCategory_Application/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (group = Web) conn: All Connections'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy_0
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
    podSelector: {}
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (group = Web) conn: All Connections'
        nsx-id: "10400"
    creationTimestamp: null
    name: policy_1
spec:
    ingress:
        - from:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web) dst: (group = App) conn: All Connections'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy_2
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web) dst: (group = App) conn: All Connections'
        nsx-id: "10401"
    creationTimestamp: null
    name: policy_3
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App) dst: (group = DB) conn: All Connections'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy_4
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__DB
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = App) dst: (group = DB) conn: All Connections'
        nsx-id: "10405"
    creationTimestamp: null
    name: policy_5
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__DB
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: noNsxID
    creationTimestamp: null
    name: defaultDeny
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
